--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,9 +1,10 @@
 PORT=4000
-FRONTEND_URL=http://localhost:5173
-MONGO_URI= mongodb://127.0.0.1:27017/MERN_JOB_SEEKING_WEBAPP
+FRONTEND_URL=https://job-seeking-application-eight.vercel.app/login
+MONGO_URI= mongodb:mongodb+srv://kbakale86:zGjBLwgcGW0ieRSP@cluster0.vmhiy1x.mongodb.net/
 CLOUDINARY_CLIENT_NAME=dtcr9e8m1
 CLOUDINARY_CLIENT_API=352567751417446
 CLOUDINARY_CLIENT_SECRET=waZH8pjKaF4aTrUivVfCvXnZh8M
 JWT_SECRET_KEY=iykykiykykiykyk
 JWT_EXPIRES=7d
+
 COOKIE_EXPIRE=5
